[package]
name = "feather"
version = "0.1.0"
edition = "2021"

[dependencies]
feather_api = { path = "crates/api" }
log = "0.4.14"
tokio = { version = "1", features = [ "full" ] }
ahash = "0.7.6"
num-traits = "0.2.14"
serde_json = "1.0.69"
feather_logging = { path = "crates/logging" }
data_generators = { path = "crates/data_generators" }

[dev-dependencies]
rand = "0.8.4"
once_cell = "1.9.0"
itertools = "0.10.3"
uuid = "0.8.2"

[[example]]
name = "hello_player"
path = "examples/hello_player.rs"
crate-type = [ "dylib" ]

[[example]]
name = "tnt_run"
path = "examples/tnt_run.rs"
crate-type = [ "dylib" ]

# No longer need to use release for "development":
[profile.dev.package."*"]
opt-level = 1

[profile.release]
codegen-units = 4

[workspace]
members = [
    "crates/api",
    "crates/data_generators",
    "crates/packet_logger",
    "crates/consts",
    "crates/logging"
]

[workspace.metadata.dylint]
libraries = [
    { git = "https://github.com/MinerSebas/bevy_lint" },
]
