[package]
name = "feather_api"
version = "0.1.0"
authors = [ "caelunshun <caelunshun@gmail.com>" ]
edition = "2021"

[lib]
crate-type = [ "dylib" ]

[dependencies]
ahash = "0.7"
anyhow = "1"
bevy = { version = "0.6", default-features = false, features = [ "bevy_dynamic_plugin" ] }
flume = "0.10"
itertools = "0.10"
log = "0.4"
parking_lot = "0.11"
uuid = { version = "0.8", features = [ "v4" ] }
rayon = "1.5"
rand = "0.8"
bitvec = "0.22.3"
serde = "1.0.130"
vek = "0.15.1"
bitflags = "1.3.2"
num-traits = "0.2.14"
thiserror = "1.0.30"
zip = "0.5.13"
md-5 = "0.9"
once_cell = "1.8.0"
num-bigint = "0.4.2"
rsa = "0.5.0"
sha-1 = "0.9"
serde_json = "1.0.68"
ring = "0.17.0-alpha.10"
slab = "0.4.5"
hematite-nbt = { git = "https://github.com/Iaiao/hematite_nbt", branch = "patch-1" }
tokio = { version = "1.12.0", features = [ "full" ] }
toml = "0.5.8"
colored = "2.0.0"
fern = "0.6.0"
chrono = "0.4.19"
aes = "0.7.5"
cfb8 = "0.7.1"
flate2 = "1.0.22"
byteorder = "1.4.3"
bytemuck = "1.7.2"
smallvec = "1.7.0"
arrayvec = { version = "0.7.1", features = [ "serde" ] }
bytes = "1.1.0"
num-derive = "0.3.3"
derive_more = "0.99.16"
bincode = "1"
ureq = { version = "2.3.0", features = [ "json" ] }
rsa-der = "0.2.1"
base64 = "0.13.0"
futures-lite = "1.12.0"
indexmap = "1.7.0"
const_format = "0.2.22"
feather_consts = { path = "../consts" }
feather_logging = { path = "../logging" }
strum_macros = "0.23.1"
strum = "0.23.0"
ordinalizer = "0.1.0"
serde_with = "1.11.0"

[dev-dependencies]
crossbeam-utils = "0.8.5"
rand_pcg = "0.3.1"
approx = "0.5.0"

[build-dependencies]
data_generators = { path = "../data_generators" }
