[package]
name = "feather_logging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fern = "0.6.0"
colored = "2.0.0"
log = "0.4.14"

time = { version = "0.3.5", features = [ "macros", "formatting", "local-offset" ] }
